[tool.poetry]
name = "gpt3-sum-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
moviepy = "^1.0.3"
ffmpeg-python = "^0.2.0"
uvicorn = "^0.20.0"
python-multipart = "^0.0.5"
torch = "^1.13.1"
torchvision = "^0.14.1"
torchaudio = "^0.13.1"
torchtext = "^0.14.1"
pyannote-audio = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
